--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ nav a{
 }
 nav a:hover{
     color: white;
-    background-color: hsl(179, 56%, 35%);
+    background-color: #3BAA67;
     /*font-size: 18px;*/
     cursor: pointer;
 }
@@ -53,10 +53,134 @@ nav img{
     gap: 40px;
     margin-top: 25px;
 }
-.btn-one button {
-    border-color: hsl(179, 56%, 35%); 
-    border-radius: 20px;
-    padding: 20px;
+.btn-one button { 
+    border: #3BAA67 solid 1px;
+    border-radius: 10px;
+    font-size:  15px;
+    font-weight: 700;
+    color: #3BAA67;
+    width: 150px;
+    height: 50px;
+    background-color: white;
+    text-align: center;
+}
+.btn-one button:hover{
+    cursor: pointer;
+    background-color: #3BAA67;
+    color: #ffff;
+}
+.second{
+    display: flex;
+    gap: 160px;
+    margin: 100px;
+}
+.second b{
+    font-size: 35px;
+    font-weight: 700;
+}
+.second p{
+    font-size: 10px;
+}
+.fourth{
+    display: flex;
+    justify-content: space-between;
+    margin: 80px;
+    gap: 150px;
+}
+.fourth img{
+    width: 400px;
+}
+.fourth h2{
+    margin-bottom: 30px;
+    font-size: 35px;
+    color:  #494949;
+    line-height: 46px;
+    font-weight: 700;
+}
+.fourth p{
+line-height: 32px;
+margin-bottom: 30px;
+}
+.fifth{
+    display: flex;
+    margin: 100px;
+    gap: 100px;
+}
+.fifth img{
+    margin-bottom: 20px;
+}
+.fifth h3{
+    font-size: 23px;
+    color:  #494949;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.fifth p{
+    line-height: 20px;
+    padding-right: 15px ;
+    color:  #6e6d6d;
+}
+.sixth{
+    margin: 100px;
+}
+.sixth h3{
+    font-size: 23px;
+    color: #3F3F3F;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+.instructor{
+    display: flex;
+    gap: 80px;
+}
+.instructor p{
+    font-size: 15px;
+    font-family: 'AirbnbCereal_W_Bk';
+font-style: normal;
+font-weight: 400;
+line-height: 20px;
+color: rgba(18, 18, 18, 0.6);
+}
+.instructor p img {
+    width: 15px;
+}
+.teacher{
+    width: 200px;
+    height: 200px;
+}
+.inst-name{
+    border: 1px solid #E6E6E6;
+    border-radius: 8px;
+    padding: 30px;
+}
+footer{
+    margin-top: 20px;
+    padding: 100px;
+    gap: 100px;
+    display: flex;
+left: 0px;
+top: 143px;
+background: #E7EFE3;
+}
+footer h4{
+    font-size: 18px;
+    font-weight: 700;
+}
+footer a{
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    margin-top: 20px;
+    line-height: 20px;
+}
+footer a:hover{
+    cursor: pointer;
+    border-radius: 10px;
+    width: 100px;
+    height: 30px;
+    background-color: #3BAA67;
+    padding: 5px;
+    text-align: center;
 }
 @media only screen and (max-width: 600px){
   nav{
@@ -75,4 +199,29 @@ nav img{
         display: flex;
         flex-direction: column;
     }
+    .first h1{
+        font-size: 40px;
+    }
+    .btn-one{
+        flex-direction: column;
+    }
+    .second{
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+    }
+    .fourth{
+        flex-direction: column;
+        gap: 100px;
+    }
+.fifth{
+    flex-direction: column;
+    gap: 60px;
+    margin: 50px;
+}
+footer{
+    flex-direction: column;
+    gap: 60px;
+    padding: ;
+}
 }
